# stormin

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.toml  grammar.md
.github/workflows/: build.yml
src/: app.rs  config.rs  data_generator.rs  logger.rs  main.rs  template.pest  template.rs  ui.rs  worker.rs
src/config/: loader.rs  mod.rs  proxy.rs  validator.rs
src/generator/: chinese_bank_card.rs  chinese_id.rs  chinese_name.rs  cn_mobile.rs  email.rs  ip.rs  mod.rs  password.rs  qqid.rs  user.rs  user_agent.rs  username.rs
src/ui/: cli.rs  event_handler.rs  mod.rs  stats_updater.rs
