[package]
name = "stormin"
version = "0.0.6"
license = "MIT"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
base64 = "0.21.0"
ratatui = "0.24.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
crossterm = "0.29"
ctrlc = "3.4.6"
sysinfo = "0.34.2"
url = "2"
tokio = { version = "1", features = ["full"] }
pest = "2.7"
pest_derive = "2.7"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
